tests/compile_fail/avg_on_text.stderr
error[E0277]: the trait bound `drizzle::core::types::Text: drizzle::core::types::Numeric` is not satisfied
  --> tests/compile_fail/avg_on_text.rs:17:17
   |
17 |     let _ = avg(user.name);
   |             --- ^^^^^^^^^ the trait `drizzle::core::types::Numeric` is not implemented for `drizzle::core::types::Text`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `drizzle::core::types::Numeric`:
             Double
             Float
             Int
             drizzle::core::types::Any
             drizzle::core::types::BigInt
             drizzle::core::types::SmallInt
note: required by a bound in `avg`
  --> core/src/expr/agg.rs
   |
   | pub fn avg<'a, V, E>(expr: E) -> SQLExpr<'a, V, Double, Null, Agg>
   |        --- required by a bound in this function
...
   |     E::SQLType: Numeric,
   |                 ^^^^^^^ required by this bound in `avg`
